--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 /* Layouts */
 /* Animation Mixins */
+@import '~ngx-toastr/toastr';
 @-webkit-keyframes dropdownAnimation {
     from {
       opacity: 0;
