--- a/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -2,13 +2,13 @@
   <ul class="nav">
     <li class="nav-item nav-category">Main Menu</li>
     <li class="nav-item">
-      <a class="nav-link" routerLink='/add-ingredient' routerLinkActive="active">
+      <a class="nav-link" routerLink='/admin/add-ingredient' routerLinkActive="active">
         <i class="menu-icon typcn typcn-document-text"></i>
         <span class="menu-title">Add Ingredients</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink='/edit-ingredient' routerLinkActive="active">
+      <a class="nav-link" routerLink='/admin/edit-ingredient' routerLinkActive="active">
         <i class="menu-icon typcn typcn-document-text"></i>
         <span class="menu-title">Edit Ingredients</span>
       </a>
