edit functionality and footer logo added

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -47,11 +47,11 @@
 </div>
 
 <!-- Footer -->
-<footer class="p-3 bg-white">
+<footer class="p-1 bg-white">
   <div class="container-fluid">
     <div class="d-flex justify-content-between small">
-      <p class="mb-0">Copyright subthegrub.com. All Rights Reserved</p>
-      <p class="mb-0">Brought to you by <img width="110px" src="../../../assets/footer_logo.jpeg"></p>
+      <p class="mb-0" style="line-height: 2.4;">Copyright subthegrub.com. All Rights Reserved</p>
+      <p class="mb-0">Brought to you by <img width="110px" src="../../../assets/footer_logo.png"></p>
     </div>
   </div>
 </footer>
