consoles removed and few CSS changes.

--- a/src/app/admin/admin-header/admin-header.component.html
+++ b/src/app/admin/admin-header/admin-header.component.html
@@ -1,8 +1,21 @@
 <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+  <!-- Brand Logo -->
   <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
     <a class="navbar-brand brand-logo" href="https://subthegrub.com/#/home">
       <img src="../../../assets/main_logo.jpeg" alt="logo"> </a>
     <a class="navbar-brand brand-logo-mini" href="https://subthegrub.com/#/home">
       <img src="../../../assets/main_logo.jpeg" alt="logo"> </a>
+  </div>
+
+  <!-- Nav Links -->
+  <div class="nav-links">
+    <ul class="px-5">
+      <li class="mr-3">
+        <a class="nav-link" routerLink='/admin/add-ingredient' routerLinkActive="active">Add</a>
+      </li>
+      <li>
+        <a class="nav-link" routerLink='/admin/edit-ingredient' routerLinkActive="active">Edit</a>
+      </li>
+    </ul>
   </div>
 </nav>
