--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -2,7 +2,7 @@
 
   <!-- header -->
   <header class="d-flex justify-content-center p-3">
-    <img src="../../../assets/main_logo.jpeg">
+    <img class="brand-logo" src="../../../assets/main_logo.jpeg">
   </header>
 
   <!-- main content -->
@@ -49,9 +49,13 @@
 <!-- Footer -->
 <footer class="p-1 bg-white">
   <div class="container-fluid">
-    <div class="d-flex justify-content-between small">
-      <p class="mb-0" style="line-height: 2.4;">Copyright subthegrub.com. All Rights Reserved</p>
-      <p class="mb-0">Brought to you by <img width="110px" src="../../../assets/footer_logo.png"></p>
+    <div class="row small">
+      <div class="col-12 col-sm-6">
+        <p class="mb-0" style="line-height: 2.4;">Copyright subthegrub.com. All Rights Reserved</p>
+      </div>
+      <div class="col-12 col-sm-6">
+        <p class="mb-0 text-sm-right">Brought to you by <img width="110px" src="../../../assets/footer_logo.png"></p>
+      </div>
     </div>
   </div>
 </footer>
