--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -19,25 +19,21 @@
     </div>
     <!-- End Search Input For Alternate Ingredients -->
 
-    <!-- Alternate Ingredient Cards -->
-
     <div *ngIf="alternateIngredients.length === 0" class="row w-100">
       <div class="col-12">
         <p class="text-center">No Ingredients Found</p>
       </div>
     </div>
 
+    <!-- Alternate Ingredient Cards -->
     <div class="row w-100">
 
       <!-- Cards -->
       <ng-container *ngFor="let ingredient of alternateIngredients">
         <div *ngIf="ingredient.name !== '' " class="col-12 col-md-4 mb-3 mb-md-0">
           <!-- <div class="card"> -->
-            <img [src]="ingredient.imageSrc" class="card-img-top" [alt]="ingredient.imageAlt">
+            <img src="{{ingredient.imageSrc || '../../../assets/default.png'}}" class="card-img-top" [alt]="ingredient.imageAlt">
             <h5 class="card-title">{{ingredient.name}}</h5>
-            <!-- <div class="card-body">
-            </div> -->
-          <!-- </div> -->
         </div>
       </ng-container>
     </div>
