--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -10,6 +10,7 @@
 
 .card-img-top {
     max-height: 400px;
+    height: 400px;
     min-height: 340px;    
     min-width: -webkit-fill-available;
     object-fit: cover;
